<resources>
    <string name="app_name">HomeWork2</string>
    <string name="titleScreenText">THE GAME!</string>
    <string name="titleScreenButton">START!</string>
    <string name="creationScreen">Choose your stats!</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Str">Strength</string>
    <string name="Int">Intelligence</string>
    <string name="Lck">Luck</string>
    <string name="HP">Health</string>
    <string name="StrView">Strength: </string>
    <string name="IntView">Intelligence: </string>
    <string name="HPView">Health: </string>
    <string name="LckView">Luck: </string>
    <string name="GldView">Gold: </string>
    <string name="EmptyPurse">Not enough Gold!</string>
    <string name="StatPrompt">Spend Gold to Level Up!</string>
    <string name="HeroName">Umlaut, Son of Enya</string>
    <string name="HeroNameShort">Umlaut</string>
    <string name="SleepError">Sleep Error</string>
    <string name="RewardTap">Tap for Reward!</string>
    <string name="Cooldown">THAT\'S ON COOLDOWN!</string>
    <string name="GameOver">GAME OVER!</string>
    <string name="Blank"> </string>
    <string name="Fail">The enemy steps over your corpse and proceeds to raid your village &#8230; </string>
    <string name="Win">Peace returns to your people. The day is saved! </string>
    <string name="Intimidate1">NO ONE WILL COME TO SAVE YOU!</string>
    <string name="Intimidate2">LOUD NOISES!</string>
    <string name="Reason1">We are a peaceful people. Please, stop this.</string>
    <string name="Reason2">WAIT!!! NO!!! I\'M A VEGETARIAN!!!</string>
    <string name="IntimSuccess">I\'M SORRY!!! YOU CAN HAVE MY THINGS, JUST LET ME LIVE!!!</string>
    <string name="IntimFailure">I\'VE HAD RASHES SCARIER THAN YOU!</string>
    <string name="ReasonSuccess">No wrongs committed &#8230; what need is there for bloodshed?</string>
    <string name="ReasonFailure">Enough of your lies, beast! EN GUARDE!</string>
    <string name="Expo1">Gorgol&#8230;a tiny Orcish village near where the Plains of Einaryl meet the grand Forest of Alstor-orah.</string>
    <string name="Expo2">Tucked into the edge of the forest, the villagers have managed to isolate themselves from the outside world for generations, enjoying a peace quite unusual to Orckind.</string>
    <string name="Expo3">Ever the fierce orcish warriors, the Gorgolans have always worked together to build up and secure their proud village (though any enemies lay in faraway lands and </string>
    <string name="Expo4">whatever dangerous beasts may once have stalked the wilderness have long since been driven out or hunted to extinction by the old warriors and their proving rituals).</string>
    <string name="Expo5">The Gorgolans of today may still sing the old songs, tell the old tales, and show off the old trophies, but each is more likely to be found wielding a hammer and nails</string>
    <string name="Expo6">than a sword and shield, and not one would complain about the change. Water is plentiful, and though forest greens may never satisfy the rumbles of an orcish appetite, food is only ever a half-day\'s  walk to the plains.</string>
    <string name="Expo7">There, large roving herds of Aurochs roam, only occasionally interrupted by a band of Gorgolan hunters stocking up for their families before the herd rolls on.</string>
    <string name="Expo8">Thusly does the wheel of life turn in this place, with little in the way to disturb it. There is nothing of material value here save to those who have grown </string>
    <string name="Expo9">to love the place anyway. That is, until repeated wars strained the food stocks the neighboring kingdom of Aryndell to their limits. The people were starving, </string>
    <string name="Expo10">so their rulers sought food&#8230;and found the Aurochs. Since then, ranches have begun to dot the once-quiet plains, moving ever closer to Gorgol and its sleepy citizens.</string>
    <string name="Expo11">This turned the animals into a valuable commodity, and the humans of Aryndell into their self-proclaimed keepers.</string>
    <string name="Expo12">Hunting them is now considered a punishable offense, endangering the livelihood and culture of the Gorgolans.</string>
    <string name="Expo13">Harsh words and fences are hardly enough to keep an Orc from feeding his family, however. In their rage, the humans</string>
    <string name="Expo14">have begun to send mercenaries to retaliate&#8230;and cut the problem at its source, if possible.</string>
    <string name="Expo15">The eldest son of the Chief\'s line, you have taken up the old warmantle of your forbears.</string>
    <string name="Expo16">Peace has been your life until now, but you are Umlaut, son of Enya the Stalwart, and you will protect your people.</string>
    <string name="Pageturn">Next Page</string>
</resources>
