<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/paper2"
    tools:context=".CharacterCreation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/strUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Plus" />

            <TextView
                android:id="@+id/strLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="65dp"
                android:text="@string/Str" />

            <Button
                android:id="@+id/strDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="@string/Minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="110dp"
                android:src="@drawable/orc" />

            <TextView
                android:id="@+id/heroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HeroName"/>

            <TextView
                android:id="@+id/HpView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HPView" />

            <TextView
                android:id="@+id/StrView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StrView" />

            <TextView
                android:id="@+id/IntView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IntView" />

            <TextView
                android:id="@+id/LckView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LckView" />

            <TextView
                android:id="@+id/GldView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GldView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/intUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Plus" />

            <TextView
                android:id="@+id/intLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/Int" />

            <Button
                android:id="@+id/intDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Minus" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/hpUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Plus" />

            <TextView
                android:id="@+id/hpLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="70dp"
                android:text="@string/HP" />

            <Button
                android:id="@+id/hpDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/toCombat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="To Battle!" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/lckUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Plus" />

            <TextView
                android:id="@+id/lckLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="@string/Lck" />

            <Button
                android:id="@+id/lckDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Minus" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>