<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_bckgrnd"
    tools:context=".Exposition">

    <TextView
        android:id="@+id/Block1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Expo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#dfd5d5"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:shadowDx="5"
        android:shadowDy="5"/>

    <TextView
        android:id="@+id/Block2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Expo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Block1"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#dfd5d5"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:shadowDx="5"
        android:shadowDy="5"/>

    <TextView
        android:id="@+id/Block3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Expo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Block2"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#dfd5d5"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:shadowDx="5"
        android:shadowDy="5"/>

    <TextView
        android:id="@+id/Block4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Expo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Block3"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#dfd5d5"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:shadowDx="5"
        android:shadowDy="5"/>

    <TextView
        android:id="@+id/Block5"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Expo5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Block4"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#dfd5d5"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:shadowDx="5"
        android:shadowDy="5"/>
    <TextView
        android:id="@+id/Block6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Expo6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Block5"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#dfd5d5"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:shadowDx="5"
        android:shadowDy="5"/>

    <Button
        android:id="@+id/TurnPage"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Pageturn"
        android:onClick="pageTurn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>